fixed long titles breaking page width
Added word breaking attribute to titles so if the title is too long the text is split into half

--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -442,3 +442,8 @@ blockquote p {
       display: none;
   }
 }
+
+.article-title {
+  font-size: 64px; 
+  overflow-wrap: break-word;
+}
